Bug 256225 - Massif-visualizer crashes when opening a file
Summary: Massif-visualizer crashes when opening a file
Status: RESOLVED FIXED
Alias: None
Product: massif-visualizer
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 0.2
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: 0.1
Assignee: Massif Visualizer developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-06 13:37 UTC by Davide
Modified: 2010-11-06 16:39 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Davide 2010-11-06 13:37:24 UTC
Version:           0.2 (using KDE 4.5.2) 
OS:                Linux

Here GDB backtrace

Program received signal SIGSEGV, Segmentation fault.
Massif::FileData::peak (this=0x0) at /home/netcelli/Download/massif-visualizer-0.2/massifdata/filedata.cpp:80
80      {
(gdb) bt
#0  Massif::FileData::peak (this=0x0) at /home/netcelli/Download/massif-visualizer-0.2/massifdata/filedata.cpp:80
#1  0x0000000000417f48 in Massif::Parser::parse (this=0x7fffffffb840, file=0x8a73c0)
    at /home/netcelli/Download/massif-visualizer-0.2/massifdata/parser.cpp:59
#2  0x0000000000413bc8 in Massif::MainWindow::openFile (this=0x7cb6d0, file=<value optimized out>)
    at /home/netcelli/Download/massif-visualizer-0.2/app/mainwindow.cpp:276
#3  0x0000000000416434 in Massif::MainWindow::openFile (this=0x7cb6d0)
    at /home/netcelli/Download/massif-visualizer-0.2/app/mainwindow.cpp:259
#4  0x0000000000416524 in Massif::MainWindow::qt_metacall (this=0x7cb6d0, _c=QMetaObject::InvokeMetaMethod, _id=11280897, 
    _a=0x7fffffffc230) at /home/netcelli/Download/massif-visualizer-0.2/build/app/mainwindow.moc:89
#5  0x00007ffff4878cdf in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) ()
   from /usr/lib64/qt4/libQtCore.so.4
#6  0x00007ffff4d4f222 in QAction::triggered(bool) () from /usr/lib64/qt4/libQtGui.so.4
#7  0x00007ffff4d508eb in QAction::activate(QAction::ActionEvent) () from /usr/lib64/qt4/libQtGui.so.4
#8  0x00007ffff5104b5a in ?? () from /usr/lib64/qt4/libQtGui.so.4
#9  0x00007ffff5104dfc in QAbstractButton::mouseReleaseEvent(QMouseEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#10 0x00007ffff51d136a in QToolButton::mouseReleaseEvent(QMouseEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#11 0x00007ffff4daba7d in QWidget::event(QEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#12 0x00007ffff4d5677c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#13 0x00007ffff4d5c9de in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/qt4/libQtGui.so.4
---Type <return> to continue, or q <return> to quit---
#14 0x00007ffff79bdab6 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#15 0x00007ffff486159b in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib64/qt4/libQtCore.so.4
#16 0x00007ffff4d5b3d5 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /usr/lib64/qt4/libQtGui.so.4
#17 0x00007ffff4ddd4a3 in ?? () from /usr/lib64/qt4/libQtGui.so.4
#18 0x00007ffff4ddc539 in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#19 0x00007ffff4e05d12 in ?? () from /usr/lib64/qt4/libQtGui.so.4
#20 0x00007ffff0f6bd71 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#21 0x00007ffff0f6fba0 in g_main_context_iterate () from /usr/lib/libglib-2.0.so.0
#22 0x00007ffff0f6fd54 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#23 0x00007ffff488cc63 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) ()
   from /usr/lib64/qt4/libQtCore.so.4
#24 0x00007ffff4e0568e in ?? () from /usr/lib64/qt4/libQtGui.so.4
#25 0x00007ffff4860322 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) ()
   from /usr/lib64/qt4/libQtCore.so.4
#26 0x00007ffff486070d in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#27 0x00007ffff48646e3 in QCoreApplication::exec() () from /usr/lib64/qt4/libQtCore.so.4
#28 0x00000000004113eb in main (argc=<value optimized out>, argv=<value optimized out>)
    at /home/netcelli/Download/massif-visualizer-0.2/app/main.cpp:54


Reproducible: Always
Comment 1 Milian Wolff 2010-11-06 15:19:46 UTC
please attach the massif file you try to open
Comment 2 Davide 2010-11-06 16:19:33 UTC
Sorry I forgot to say it crashes when I open NON-massif file. 
It works well by opening massif file.
Comment 3 Milian Wolff 2010-11-06 16:39:47 UTC
ok, fixed it. thanks