don't crash on parse error

BUG: 256225